assets/css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

body {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    /* background-color: #36454F; */
    background-color: black;
    /*color: #3a3a3a;*/
    color: white;
    font-family: "Roboto", sans-serif;
}

/* causes everything to inherit bgc from its parent */
* * {
    background-color: inherit;
    color: inherit
}

/* header */
header {
    position: fixed;
    z-index: 99;
    width: 100%;
    padding: 0 1rem;
    display: flex;
    flex-direction: column;
    /*border-bottom: 3px solid #3a3a3a;*/
    border-bottom: 3px solid white;
}

header a {
    text-decoration: none;
    /*color: #3a3a3a;*/
    color: white;
}

#nav-toggle-label {
    width: 100vw;
    display: flex;
    flex-direction: row;
    align-items: center;
}

/* name should be changed in 
html and here to reflect that 
they are not together anymore */
#logo-div {
    display: flex;
    flex-direction: column;
    flex-basis: 75%;
}

/* Font still needs to be chosen. */
#logo {
    white-space: nowrap;
    text-transform: capitalize;
    min-height: 1.5em;
    margin-top: .35em;
    /*margin-bottom: -.25em;*/
    flex-shrink: 1;
}

/* this overlaps when looking at specific cell phones
    is there a way to do it with flex box? */
#icon-div {
    flex-basis: 20%;
}

#nav-toggle-icon {
    font-size: 225%;
    margin-bottom: -2.5rem;
    align-self: center;
    position: relative;
    top: 32%;
    left: 13%;
}

.active {
    /*border: 1.5px solid #3a3a3a;*/
    border: 1.5px solid white;
    padding: 1px 5px;
    border-radius: 5px;
}

#nav-menu {
    font-size: 110%;
    letter-spacing: 1.5px;
    list-style-type: none;
}

#nav-menu>li {
    margin-bottom: .2em;
}

nav {
    position: absolute;
    /*border-top: 3px solid #3a3a3a;
    border-bottom: 3px solid #3a3a3a;*/
    border-top: 3px solid white;
    border-bottom: 3px solid white;
    width: 100%;
    left: 0;
    padding-left: 1rem;
    padding-top: .7rem;
    padding-bottom: .35em;
    display: none;
    top: 100%;
    /*background-color: #E5E4E2;*/
    background-color: black;
}

#nav-toggle:checked~nav {
    display: block;
}

#nav-toggle {
    display: none;
}

/* main */
main {
    /* sticks footer to bottom */
    flex: 1 0 auto;
    /*don't use vh for margin 
      use ems instead */
    margin-top: 7em;
    margin-bottom: 4em;
    /* why was this padding here? 
    padding-left: .75rem;*/
    align-items: center;
}

/* Landing page styles */
#landing-page {
    display: flex;
    flex-direction: column;
    margin-top: -3.6em;
    font-size: 99%;
}

#landing-page a {
    text-decoration: none;
    color: white;
}

#mobile-lp {
    display: flex;
    position: relative;
    flex-direction: column;
}

#hero1 {
    background: url('../images/hero-images/hero1-img.jpg') no-repeat center center/cover;
}

#hero2 {
    background: url('../images/hero-images/hero2-img.jpg') no-repeat center center/cover;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 10%;
}

#hero2-first-block {
    display: flex;
    flex-direction: row;
    gap: 15%;
    justify-content: center;
    align-items: center;
    margin: 0% 6% 0% 6%;
    position: relative;
    bottom: -1em;
}

.hero2-first-block-text {
    color: white;
}

#hero2-column-block {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    margin-left: 6%;
    margin-right: 6%;
    position: relative;
    height: 18em;
    bottom: -3em;
}

#hero3 {
    background: url('../images/hero-images/hero3-img.jpg') no-repeat center center/cover;
    display: none;
}

.hero-div {
    height: 600px;
    width: 100%;
    display: flex;
    position: relative;
}

.position-absolute {
    position: absolute;
}

.landing-page-text {
    display: flex;
    flex-direction: column;
    /* this syle needs to be addressed later */
    background-color: rgba(0, 0, 0, 0.6);
    width: 60%;
    padding: 10px;
    border-radius: 10px;
    width: auto;
    height: fit-content;
}

.transparent-background {
    background: transparent;
}

.centered-text {
    text-align: center;
}

.hover-border:hover {
    /*border-bottom: 1.5px solid #3a3a3a;*/
    border: 1.5px solid white;
    border-radius: 10px;
    margin: -1.5px;
}

/* positions cover-text for hero1 image */
.hero1-text1 {
    top: 4em;
    left: 1em;
    white-space: nowrap;
}

.hero1-text2 {
    bottom: 11em;
    right: 1em;
}

/*
.hero2-text {
    top: 7.5em;
    width: 37%;
    left: .5em;
}

.new-player-info {
    top: 7.5em;
    width: 37%;
    position: absolute;
    right: .5em;
}

.two-player-info {
    position: absolute;
    top: 16.3em;
    width: 64%;
    left: 4em;
}

.fav-games-info {
    position: absolute;
    top: 24em;
    width: 82%;
    left: 2em;
}

.mailing-list {
    position: absolute;
    bottom: 4.4em;
    left: 3em;
}*/

/* content pages styling */
.container {
    display: flex;
    justify-content: center;
    flex-direction: column;
    position: relative;
    margin-bottom: 22px;
}

.game-cover {
    height: 65vw;
    width: 65vw;
    margin-top: 2em;
    margin-bottom: 2em;
    /* Makes the square image into a circle */
    border-radius: 18%;
    max-width: 300px;
    max-height: 300px;
    align-self: center;
}

.box {
    /*border: 3px solid #3a3a3a;*/
    /*background-color: #E5E4E2;*/
    background-color: black;
    border: 3px solid white;
    border-radius: 10px;
}

.content-header {
    position: relative;
    width: 85%;
    padding: 0.5rem 0rem;
    margin-top: .5em;
    align-self: center;
    display: flex;
    justify-content: center;
}

.content {
    margin: 2vh;
    max-width: 80vw;
    padding: .7rem .7rem 1rem .7rem;
    align-self: center;
}
/* ... */

